--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link href="css/mui.min.css" rel="stylesheet"/>
     <script type="text/javascript" charset="utf-8">
       	mui.init();
+      	
     </script>
 </head>
 <body>
-	
+	爱的发生的发生的
 </body>
 </html>
